@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2005 IBM Corporation and others.
+ * Copyright (c) 2000, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -11,10 +11,6 @@
 package org.eclipse.jdt.internal.core;
 
 import org.eclipse.jdt.core.*;
-import org.eclipse.jdt.core.IField;
-import org.eclipse.jdt.core.IType;
-import org.eclipse.jdt.core.JavaModelException;
-import org.eclipse.jdt.core.Signature;
 import org.eclipse.jdt.core.dom.ASTNode;
 import org.eclipse.jdt.internal.compiler.lookup.Binding;
 
@@ -37,8 +33,12 @@ public boolean equals(Object o) {
 public ASTNode findNode(org.eclipse.jdt.core.dom.CompilationUnit ast) {
 	// For field declarations, a variable declaration fragment is returned
 	// Return the FieldDeclaration instead
+	// For enum constant declaration, we return the node directly
 	ASTNode node = super.findNode(ast);
 	if (node == null) return null;
+	if (node.getNodeType() == ASTNode.ENUM_CONSTANT_DECLARATION) {
+		return node;
+	}
 	return node.getParent();
 }
 /**
@@ -54,36 +54,41 @@ public Object getConstant() throws JavaModelException {
 			
 	String constantSource = new String(constantSourceChars);
 	String signature = info.getTypeSignature();
-	if (signature.equals(Signature.SIG_INT)) {
-		constant = new Integer(constantSource);
-	} else if (signature.equals(Signature.SIG_SHORT)) {
-		constant = new Short(constantSource);
-	} else if (signature.equals(Signature.SIG_BYTE)) {
-		constant = new Byte(constantSource);
-	} else if (signature.equals(Signature.SIG_BOOLEAN)) {
-		constant = Boolean.valueOf(constantSource);
-	} else if (signature.equals(Signature.SIG_CHAR)) {
-		if (constantSourceChars.length != 3) {
-			return null;
-		}
-		constant = new Character(constantSourceChars[1]);
-	} else if (signature.equals(Signature.SIG_DOUBLE)) {
-		constant = new Double(constantSource);
-	} else if (signature.equals(Signature.SIG_FLOAT)) {
-		constant = new Float(constantSource);
-	} else if (signature.equals(Signature.SIG_LONG)) {
-		if (constantSource.endsWith("L") || constantSource.endsWith("l")) { //$NON-NLS-1$ //$NON-NLS-2$
-			int index = constantSource.lastIndexOf("L");//$NON-NLS-1$
-			if (index != -1) {
-				constant = new Long(constantSource.substring(0, index));
-			} else {
-				constant = new Long(constantSource.substring(0, constantSource.lastIndexOf("l")));//$NON-NLS-1$
+	try {
+		if (signature.equals(Signature.SIG_INT)) {
+			constant = new Integer(constantSource);
+		} else if (signature.equals(Signature.SIG_SHORT)) {
+			constant = new Short(constantSource);
+		} else if (signature.equals(Signature.SIG_BYTE)) {
+			constant = new Byte(constantSource);
+		} else if (signature.equals(Signature.SIG_BOOLEAN)) {
+			constant = Boolean.valueOf(constantSource);
+		} else if (signature.equals(Signature.SIG_CHAR)) {
+			if (constantSourceChars.length != 3) {
+				return null;
 			}
-		} else {
-			constant = new Long(constantSource);
+			constant = new Character(constantSourceChars[1]);
+		} else if (signature.equals(Signature.SIG_DOUBLE)) {
+			constant = new Double(constantSource);
+		} else if (signature.equals(Signature.SIG_FLOAT)) {
+			constant = new Float(constantSource);
+		} else if (signature.equals(Signature.SIG_LONG)) {
+			if (constantSource.endsWith("L") || constantSource.endsWith("l")) { //$NON-NLS-1$ //$NON-NLS-2$
+				int index = constantSource.lastIndexOf("L");//$NON-NLS-1$
+				if (index != -1) {
+					constant = new Long(constantSource.substring(0, index));
+				} else {
+					constant = new Long(constantSource.substring(0, constantSource.lastIndexOf("l")));//$NON-NLS-1$
+				}
+			} else {
+				constant = new Long(constantSource);
+			}
+		} else if (signature.equals("QString;")) {//$NON-NLS-1$
+			constant = constantSource;
 		}
-	} else if (signature.equals("QString;")) {//$NON-NLS-1$
-		constant = constantSource;
+	} catch (NumberFormatException e) {
+		// not a parsable constant
+		return null;
 	}
 	return constant;
 }
